--- a/resources/css/map.css
+++ b/resources/css/map.css
@@ -43,7 +43,7 @@ header {
     align-items: center;
 }
 
-body, canvas {
+body, canvas, div {
     height: 100%;
     display: flex;
     flex-direction: column;
